--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-qunit": "~0.5.2",
     "grunt-contrib-concat": "~0.4.0",
-    "grunt-contrib-uglify": "~0.5.0"
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-mocha-cli": "~1.0.1",
+    "grunt-mkdir": "~0.5.0"
   }
 }
