--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "GruntTest",
+  "name": "Project",
   "version": "1.0.0",
   "authors": [
     "Drew Ambrose <CreativeSlave@users.noreply.github.com>"
@@ -18,6 +18,7 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.2.2"
+    "jquery": "~2.2.2",
+    "bootstrap": "~3.0.0"
   }
 }
